--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <header>
         <div class="header-logo">
             <img src="./img/lastwood-logo.png" class="logo" alt="">
-            <img src="./img/steam.png" class="logo-steam" alt="">
+            <a href="https://store.steampowered.com/app/767490" target="_blank"><img src="./img/steam.png" class="logo-steam" alt=""></a>
         </div>
     </header>
     <div class="video">
         <iframe min-width="760" width="70%" height="65%" min-height="415" src="https://www.youtube.com/embed/xyjafkby_Kc?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <div class="button-content">
-            <a class="button-linktoStrem" href="" target="_blank">
+            <a class="button-linktoStrem" href="https://store.steampowered.com/app/767490" target="_blank">
                 <img  class="steam-logo" src="./img/steam-logo.png">
-                <span>ADD TO wISH LIST NOW!</span>
+                <span>ADD TO WISH LIST NOW!</span>
             </a>
         </div>
     </div>
