--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     </header>
     <div class="video">
-        <iframe min-width="760" width="70%" height="65%" min-height="415" src="https://www.youtube.com/embed/xyjafkby_Kc?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe min-width="760" width="70%" height="65%" min-height="415" src="https://www.youtube.com/embed/_rea5MCHFd0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <div class="button-content">
             <a class="button-linktoStrem" href="https://store.steampowered.com/app/767490" target="_blank">
                 <img  class="steam-logo" src="./img/steam-logo.png">
